--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta content="text/html; charset=UTF-8" />
-	<title>ФИС &laquo;На Дальний Восток&raquo;</title>
+	<title>Р¤РРЎ &laquo;РќР° Р”Р°Р»СЊРЅРёР№ Р’РѕСЃС‚РѕРє&raquo;</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
@@ -76,10 +76,10 @@
 						<div class="srchform">
 						  	<div id="seacrh_container"> 
 				                <div class="input-group stylish-input-group">
-				                    <input type="text" class="form-control" placeholder="Что ищем?">
+				                    <input type="text" class="form-control" placeholder="Р§С‚Рѕ РёС‰РµРј?">
 				                    <span class="input-group-addon">
 				                        <button type="submit">
-				                            Найти
+				                            РќР°Р№С‚Рё
 				                        </button>  
 				                    </span>
 				                </div>
@@ -97,37 +97,37 @@
 						<div class="hambform">
 						  	<ul class="frstcat">
 								<li>
-									<a href="#"><span class="mf-icon city">Владивосток</span></a>
+									<a href="#"><span class="mf-icon city">Р’Р»Р°РґРёРІРѕСЃС‚РѕРє</span></a>
 								</li>
 								<li>
-									<a href="newslist.html"><span class="mf-icon dots">Новости</span></a>
+									<a href="newslist.html"><span class="mf-icon dots">РќРѕРІРѕСЃС‚Рё</span></a>
 								</li>
 								<li>
-									<a href="#"><span class="mf-icon akcii">Дальний Восток</span></a>
+									<a href="#"><span class="mf-icon akcii">Р”Р°Р»СЊРЅРёР№ Р’РѕСЃС‚РѕРє</span></a>
 								</li>
 								<li>
-									<a href="#"><span class="mf-icon autoshop">Проекты</span></a>
+									<a href="#"><span class="mf-icon autoshop">РџСЂРѕРµРєС‚С‹</span></a>
 								</li>
 								<li>
-									<a href="#"><span class="mf-icon autoitem">Сервисы</span></a>
+									<a href="#"><span class="mf-icon autoitem">РЎРµСЂРІРёСЃС‹</span></a>
 								</li>
 								<li>
-									<a href="#"><span class="mf-icon wheel">Контакты</span></a>
+									<a href="#"><span class="mf-icon wheel">РљРѕРЅС‚Р°РєС‚С‹</span></a>
 								</li>
 								<li>
-									<a href="newslist.html"><span class="mf-icon dots">Новости</span></a>
+									<a href="newslist.html"><span class="mf-icon dots">РќРѕРІРѕСЃС‚Рё</span></a>
 								</li>
 								<li>
-									<a href="#"><span class="mf-icon akcii">Дальний Восток</span></a>
+									<a href="#"><span class="mf-icon akcii">Р”Р°Р»СЊРЅРёР№ Р’РѕСЃС‚РѕРє</span></a>
 								</li>
 								<li>
-									<a href="#"><span class="mf-icon autoshop">Проекты</span></a>
+									<a href="#"><span class="mf-icon autoshop">РџСЂРѕРµРєС‚С‹</span></a>
 								</li>
 								<li>
-									<a href="#"><span class="mf-icon autoitem">Сервисы</span></a>
+									<a href="#"><span class="mf-icon autoitem">РЎРµСЂРІРёСЃС‹</span></a>
 								</li>
 								<li>
-									<a href="#"><span class="mf-icon wheel">Контакты</span></a>
+									<a href="#"><span class="mf-icon wheel">РљРѕРЅС‚Р°РєС‚С‹</span></a>
 								</li>
 							</ul>
 						</div>
@@ -143,26 +143,26 @@
 			<div class="col-md-8 text-left">
 				<ul class="mainnav">
 					<li class="nav-link">
-				  	<a href="newslist.html">Новости</a>
+				  	<a href="newslist.html">РќРѕРІРѕСЃС‚Рё</a>
 				  </li>
 				  <li class="nav-link">
-				  	<a href="#">Сервисы</a>
+				  	<a href="#">РЎРµСЂРІРёСЃС‹</a>
 				  </li>
 				  <li class="nav-link">
-				  	<a href="#">Дальний Восток</a>
+				  	<a href="#">Р”Р°Р»СЊРЅРёР№ Р’РѕСЃС‚РѕРє</a>
 				  </li>
 				  <li class="nav-link">
-				  	<a href="#">Возможности</a>
+				  	<a href="#">Р’РѕР·РјРѕР¶РЅРѕСЃС‚Рё</a>
 				  </li>
 				  <li class="nav-link">
-				  	<a href="#">Туризм</a>
+				  	<a href="#">РўСѓСЂРёР·Рј</a>
 				  </li>
 				</ul>
 			</div>
 			<div class="col-md-4 text-right">
 				<ul class="mainnav2">
 					<li class="tel-link">
-				  		<span class="telegram"></span> Канал в Telegram: <a href="#">@nadvru</a>
+				  		<span class="telegram"></span> РљР°РЅР°Р» РІ Telegram: <a href="#">@nadvru</a>
 					</li>
 				</ul>
 			</div>
@@ -184,8 +184,8 @@
 						</div>
 
 						<h2>
-							Упс! Такой страницы тут нет.<br/>
-							Заходите на <a href="#">главную страницу</a>
+							РЈРїСЃ! РўР°РєРѕР№ СЃС‚СЂР°РЅРёС†С‹ С‚СѓС‚ РЅРµС‚.<br/>
+							Р—Р°С…РѕРґРёС‚Рµ РЅР° <a href="#">РіР»Р°РІРЅСѓСЋ СЃС‚СЂР°РЅРёС†Сѓ</a>
 						</h2>
 
 				</div>
@@ -200,45 +200,45 @@
 				<div class="col-md-12">
 					<div class="f-ot">
 						<ul class="fnav col-xs-6">
-							<li>Новости</li>
+							<li>РќРѕРІРѕСЃС‚Рё</li>
 							<li></li>
-							<li><a href="#">Фоторепортажи</a></li>
-							<li><a href="#">Видео</a></li>
-							<li><a href="#">Инфографика</a></li>
-							<li><a href="#">Публикации</a></li>
-							<li><a href="#">Интервью</a></li>
-							<li><a href="#">Цифры, цитаты, факты</a></li>
+							<li><a href="#">Р¤РѕС‚РѕСЂРµРїРѕСЂС‚Р°Р¶Рё</a></li>
+							<li><a href="#">Р’РёРґРµРѕ</a></li>
+							<li><a href="#">РРЅС„РѕРіСЂР°С„РёРєР°</a></li>
+							<li><a href="#">РџСѓР±Р»РёРєР°С†РёРё</a></li>
+							<li><a href="#">РРЅС‚РµСЂРІСЊСЋ</a></li>
+							<li><a href="#">Р¦РёС„СЂС‹, С†РёС‚Р°С‚С‹, С„Р°РєС‚С‹</a></li>
 						</ul>
 						<ul class="fnav col-xs-6">
-							<li>Проекты</li>
+							<li>РџСЂРѕРµРєС‚С‹</li>
 							<li></li>
-							<li><a href="#">ТОРы</a></li>
-							<li><a href="#">Дальневосточный гектар</a></li>
-							<li><a href="#">Свободные порты</a></li>
-							<li><a href="#">Развитие приграничных территорий</a></li>
-							<li><a href="#">Инвестпроекты ГЧП БЕЗ ГЧП</a></li>
+							<li><a href="#">РўРћР С‹</a></li>
+							<li><a href="#">Р”Р°Р»СЊРЅРµРІРѕСЃС‚РѕС‡РЅС‹Р№ РіРµРєС‚Р°СЂ</a></li>
+							<li><a href="#">РЎРІРѕР±РѕРґРЅС‹Рµ РїРѕСЂС‚С‹</a></li>
+							<li><a href="#">Р Р°Р·РІРёС‚РёРµ РїСЂРёРіСЂР°РЅРёС‡РЅС‹С… С‚РµСЂСЂРёС‚РѕСЂРёР№</a></li>
+							<li><a href="#">РРЅРІРµСЃС‚РїСЂРѕРµРєС‚С‹ Р“Р§Рџ Р‘Р•Р— Р“Р§Рџ</a></li>
 						</ul>
 						<ul class="fnav col-xs-6">
-							<li><a href="#">Вопрос ответ</a></li>
-							<li><a href="#">Опросы</a></li>
-							<li><a href="#">Картотека документов</a></li>
-							<li><a href="#">Получить ДВ-гектар</a></li>
-							<li><a href="#">Бизнес-планы</a></li>
-							<li><a href="#">Инвестиционная карта</a></li>
-							<li><a href="#">Инвестиционные возможности</a></li>
+							<li><a href="#">Р’РѕРїСЂРѕСЃ РѕС‚РІРµС‚</a></li>
+							<li><a href="#">РћРїСЂРѕСЃС‹</a></li>
+							<li><a href="#">РљР°СЂС‚РѕС‚РµРєР° РґРѕРєСѓРјРµРЅС‚РѕРІ</a></li>
+							<li><a href="#">РџРѕР»СѓС‡РёС‚СЊ Р”Р’-РіРµРєС‚Р°СЂ</a></li>
+							<li><a href="#">Р‘РёР·РЅРµСЃ-РїР»Р°РЅС‹</a></li>
+							<li><a href="#">РРЅРІРµСЃС‚РёС†РёРѕРЅРЅР°СЏ РєР°СЂС‚Р°</a></li>
+							<li><a href="#">РРЅРІРµСЃС‚РёС†РёРѕРЅРЅС‹Рµ РІРѕР·РјРѕР¶РЅРѕСЃС‚Рё</a></li>
 						</ul>
 						<ul class="fnav col-xs-6">
-							<li><a href="#">Работа на Дальнем Востоке</a></li>
-							<li><a href="#">Консультация по трудовому праву </a></li>
-							<li><a href="#">Переехать на Дальний Восток</a></li>
-							<li><a href="#">Услуги для работодателя</a></li>
-							<li><a href="#">Разместить вакансию</a></li>
-							<li><a href="#">Меры поддержки</a></li>
+							<li><a href="#">Р Р°Р±РѕС‚Р° РЅР° Р”Р°Р»СЊРЅРµРј Р’РѕСЃС‚РѕРєРµ</a></li>
+							<li><a href="#">РљРѕРЅСЃСѓР»СЊС‚Р°С†РёСЏ РїРѕ С‚СЂСѓРґРѕРІРѕРјСѓ РїСЂР°РІСѓ </a></li>
+							<li><a href="#">РџРµСЂРµРµС…Р°С‚СЊ РЅР° Р”Р°Р»СЊРЅРёР№ Р’РѕСЃС‚РѕРє</a></li>
+							<li><a href="#">РЈСЃР»СѓРіРё РґР»СЏ СЂР°Р±РѕС‚РѕРґР°С‚РµР»СЏ</a></li>
+							<li><a href="#">Р Р°Р·РјРµСЃС‚РёС‚СЊ РІР°РєР°РЅСЃРёСЋ</a></li>
+							<li><a href="#">РњРµСЂС‹ РїРѕРґРґРµСЂР¶РєРё</a></li>
 						</ul>
 					</div>
 				</div>
 				<div class="col-md-10 copyright">
-					© 2017 Министерство Российской Федерации по развитию Дальнего Востока.
+					В© 2017 РњРёРЅРёСЃС‚РµСЂСЃС‚РІРѕ Р РѕСЃСЃРёР№СЃРєРѕР№ Р¤РµРґРµСЂР°С†РёРё РїРѕ СЂР°Р·РІРёС‚РёСЋ Р”Р°Р»СЊРЅРµРіРѕ Р’РѕСЃС‚РѕРєР°.
 				</div>
 				<div class="col-md-2 counters">
 
