--- a/practic-in.html
+++ b/practic-in.html
@@ -46,7 +46,7 @@
 					 </ul>
 				</div>
 
-				<div class="col-md-3 text-right">
+				<div class="col-md-3 text-right dvgbtn">
 					<a class="logolable" href="#">Дальневосточный гектар</a>
 				</div>
 
@@ -251,74 +251,33 @@
 						<div class="col-md-8 page-info-right">
 							<div class="row">
 
-								<div class="col-md-12 col-xs-12">
-									<ul class="info-custm">
-										<li>
-								  		<a href="#" class="ic-list">Показать списком</a>
-										</li>
-										<li>
-								  		<a href="#" class="mapview">Показать на карте</a>
-										</li>
-									</ul>
-								</div>
+								<div class="col-md-12 col-xs-12 practice-in">
+									<h2>Майхинская винодельня в Приморском крае</h2>
+									<img src="images/demo-practic.jpg" width="100%">
+									<div class="row">
+										<div class="col-md-8">
+											<p>Майхинская винодельня была основана в 2004 году в долине реки Майхэ и за более чем 10 лет своего существования стала знаковой туристической точкой в Приморье, а также получила высокие отзывы ценителей вина.</p>
 
-								<div class="col-md-4 col-xs-12 info-blk">
-									<div>
-								  	<a href="#">
-								  		<p><img src="images/demo-img-01.jpg"></p>
-								  		<div>Производство пищевых продуктов и напитков</div>
-								  		<span>Майхинская винодельня в Приморском крае</span>
-								  	</a>
-									</div>
-								</div>
+											<p>Это небольшое семейное хозяйство расположено в селе Анисимовка Шкотовского района Приморья. Руководит им Сергей Куречко. Он вместе с семьей выращивает дикоросы, из плодов и ягод которых делает 13 видов вин. Винодел производит вино по собственным рецептам из местного таежного и садового сырья – дикого винограда, лимонника, кишмыша, крыжовника, смородины, жимолости, вишни. Каждый любитель этого напитка может найти здесь вино по своему вкусу.</p>
 
-								<div class="col-md-4 col-xs-12 info-blk">
-									<div>
-								  	<a href="#">
-								  		<p><img src="images/demo-img-02.jpg"></p>
-								  		<div>Туризм и досуг</div>
-								  		<span>Музей-мастерская народных ремесел и традиций «Жар-птица»</span>
-								  	</a>
-									</div>
-								</div>
+											<p>Природные свойства дикоросов позволяют создавать вино с богатым ароматом и палитрой вкуса. А самое главное – натуральное: амурский виноград (красное сухое и полусладкое); кишмиш (белое полусухое); цветочное (белое полусладкое); смородина (красное полусладкое); крыжовник (белое полусухое); клубника (красное полусладкое), жимолость (красное полусладкое); PORTMAY (вино в стиле портвейн) и так далее. Благоухающий напиток с необычным вкусом, цветом и запахом винодел может изготовить из любой лесной ягоды. Для биологического вина нужны свежий сок таежных и садовых ягод, родниковая вода, душистые травы и в некоторых случаях мед или сахар. А еще любовь к уникальной природе родного края и виноделию. Хозяин регулярно самолично проводит экскурсии и устраивает дегустации для туристов. Экскурсия состоит из двух частей. Во время первой посетителям сперва показывают производственное помещение винодельни и рассказывают обо всех стадиях винодельческого процесса. Обязательная часть этого этапа – посещение винного погреба. После экскурсии наступает время дегустации.</p>
+										</div>
+										<div class="col-md-4 practice-r">
+											Адрес
+											<p>Приморский край,
+											с. Анисимовка, ул. Смольная, 11</p>
 
-								<div class="col-md-4 col-xs-12 info-blk">
-									<div>
-								  	<a href="#">
-								  		<p><img src="images/demo-img-03.jpg"></p>
-								  		<div>Мясное животноводство</div>
-								  		<span>Хозяйство с поголовьем овцематок 100 голов</span>
-								  	</a>
-									</div>
-								</div>
+											Электронная почта
+											<p><a href="mailto:info@vinoprimorie.ru">info@vinoprimorie.ru</a></p>
 
-								<div class="col-md-4 col-xs-12 info-blk">
-									<div>
-								  	<a href="#">
-								  		<p><img src="images/demo-img-04.jpg"></p>
-								  		<div>Производство пищевых продуктов и напитков</div>
-								  		<span>Майхинская винодельня в Приморском крае</span>
-								  	</a>
-									</div>
-								</div>
+											В соцсетях
+											<p><a href="#">ВКонтакте</a></p>
 
-								<div class="col-md-4 col-xs-12 info-blk">
-									<div>
-								  	<a href="#">
-								  		<p><img src="images/demo-img-05.jpg"></p>
-								  		<div>Туризм и досуг</div>
-								  		<span>Музей-мастерская народных ремесел и традиций «Жар-птица»</span>
-								  	</a>
-									</div>
-								</div>
+											Телефон / Факс
+											<p>+7(423) 243-22-22</p>
 
-								<div class="col-md-4 col-xs-12 info-blk">
-									<div>
-								  	<a href="#">
-								  		<p><img src="images/demo-img-06.jpg"></p>
-								  		<div>Мясное животноводство</div>
-								  		<span>Хозяйство с поголовьем овцематок 100 голов</span>
-								  	</a>
+											<p><a href="#" class="pdficn">Скачать PDF</a></p>
+										</div>
 									</div>
 								</div>
 
