Bug fixed FAQ, + MAP.html

--- a/faq.html
+++ b/faq.html
@@ -193,6 +193,9 @@
 					<h2>ВОПРОС-ОТВЕТ</h2>
 						<div class="calendar">
 							<ul class="cal-ui">
+								<li class="gekcheck">
+									<a href="#">Задать вопрос</a>
+								</li>
 								<li class="news-search">
 									<div id="seacrh_container2">
 										<div class="input-group stylish-input-group">
@@ -261,7 +264,18 @@
 										    </h4>
 										  </div>
 										  <div id="collapse1" class="panel-collapse collapse in">
-										    <div class="panel-body">С 01 июня 2016 года можно подать заявление на получение в безвозмездное пользование земельных участков, расположенных в Приморском крае (Ханкайский район), Хабаровском крае (Амурский район), ЕАО (Октябрьский район), Амурская область (Архаринский район), Республика Саха (Якутия) (Нерюнгринский район), Магаданская область (Ольский район), Камчатский край (Усть-Большерецкий район), Сахалинская область (Тымовский район), Чукотский АО (Анадырский район). Подать заявление на получение в безвозмездное пользование земельных участков, расположенных в иных районах и муниципальных образованиях вышеперечисленных субъектов РФ будет возможно с 01 октября 2016 года.</div>
+										    <div class="panel-body">С 01 июня 2016 года можно подать заявление на получение в безвозмездное пользование земельных участков, расположенных в Приморском крае (Ханкайский район), Хабаровском крае (Амурский район), ЕАО (Октябрьский район), Амурская область (Архаринский район), <a href="#">Республика Саха (Якутия)</a> (Нерюнгринский район), Магаданская область (Ольский район), Камчатский край (Усть-Большерецкий район), Сахалинская область (Тымовский район), Чукотский АО (Анадырский район). Подать заявление на получение в безвозмездное пользование земельных участков, расположенных в иных районах и муниципальных образованиях вышеперечисленных субъектов РФ будет возможно с 01 октября 2016 года.
+											  <ul>
+													<li>фамилия, имя, отчество (при наличии) заявителя;</li>
+													<li>место жительства;</li>
+													<li>страховой номер индивидуального лицевого счета заявителя в системе обязательного пенсионного страхования (СНИЛС);</li>
+													<li>кадастровый номер земельного участка (за исключением случая, когда земельный участок предстоит образовать);</li>
+													<li>площадь испрашиваемого участка;</li>
+													<li>кадастровые номера земельных участков, из которых предусмотрено образование испрашиваемого участка (в случае если информация о них внесена в кадастр);</li>
+													<li>почтовый адрес заявителя и (или) адрес электронной почты для связи с заявителем и способ направления заявителю документов.</li>
+												</ul>
+
+										    </div>
 										  </div>
 										</div>
 										<div class="panel">
