--- a/normativ.html
+++ b/normativ.html
@@ -259,9 +259,10 @@
 						</div>
 
 						<div class="col-md-8 page-info-right">
-							
+							<a href="#">
 							<h2>ФЕДЕРАЛЬНЫЙ ЗАКОН</h2>
 							«ОБ ОСОБЕННОСТЯХ ПРЕДОСТАВЛЕНИЯ ГРАЖДАНАМ ЗЕМЕЛЬНЫХ УЧАСТКОВ, НАХОДЯЩИХСЯ В ГОСУДАРСТВЕННОЙ ИЛИ МУНИЦИПАЛЬНОЙ СОБСТВЕННОСТИ И РАСПОЛОЖЕННЫХ НА ТЕРРИТОРИЯХ СУБЪЕКТОВ РОССИЙСКОЙ ФЕДЕРАЦИИ, ВХОДЯЩИХ В СОСТАВ ДАЛЬНЕВОСТОЧНОГО ФЕДЕРАЛЬНОГО ОКРУГА, И О ВНЕСЕНИИ ИЗМЕНЕНИЙ В ОТДЕЛЬНЫЕ ЗАКОНОДАТЕЛЬНЫЕ АКТЫ РОССИЙСКОЙ ФЕДЕРАЦИИ»
+							</a>
 							<div class="htags">
 								<span><a href="#">1 га</a></span>
 								<span><a href="#">Постановление</a></span>
