Gektar mob + hamb

--- a/gektar.html
+++ b/gektar.html
@@ -129,6 +129,29 @@
 				<div class="row">
 					<div class="col-md-12 ham-search">	
 						<div class="hambform">
+						  	<ul class="seccat">
+							  	<li>
+										<a href="#">Документы</a>
+									</li>
+									<li>
+										<a href="#">Ответы</a>
+									</li>
+									<li>
+										<a href="#">Лучшие практики</a>
+									</li>
+									<li>
+										<a href="#">Меры поддержки</a>
+									</li>
+									<li>
+										<a href="#">Бизнес-планы</a>
+									</li>
+									<li>
+										<a href="#">Новости</a>
+									</li>
+									<li>
+										<a href="#">О программе</a>
+									</li>
+						  	</ul>
 						  	<ul class="frstcat">
 								<li>
 									<a href="#"><span class="mf-icon city">Владивосток</span></a>
@@ -389,10 +412,10 @@
 				    <div class="tab-content">
 				      	<div id="panel1" class="tab-pane fade in active">
 							<div class="row">
-								<div class="col-md-8">
+								<div class="col-md-8 col-sm-8">
 									<iframe width="100%" height="500" src="https://www.youtube.com/embed/ofyP5rggqB0" frameborder="0" allowfullscreen></iframe>
 								</div>
-								<div class="col-md-4">
+								<div class="col-md-4 col-sm-4">
 									<div class="pdf-blk">
 										<a href="#">
 											<h2 href="#">Загрузить PDF</h2>
@@ -408,10 +431,10 @@
 
 						<div id="panel2" class="tab-pane fade">
 							<div class="row">
-								<div class="col-md-8">
+								<div class="col-md-8 col-sm-8">
 									<iframe width="100%" height="500" src="https://www.youtube.com/embed/jecqhdJVX30" frameborder="0" allowfullscreen></iframe>
 								</div>
-								<div class="col-md-4">
+								<div class="col-md-4 col-sm-4">
 									<div class="pdf-blk">
 										<a href="#">
 											<h2 href="#">Загрузить PDF</h2>
@@ -667,15 +690,15 @@
 	<section id="footer-gektar">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-3 callcenter">
+				<div class="col-md-3 col-sm-6 callcenter">
 					Call-центр и техподдержка
 					<p>8 800 200 32 51</p>
 				</div>
-				<div class="col-md-4 callmessage">
+				<div class="col-md-4 col-sm-6 callmessage">
 					<b>Viber</b> +7 977 8234 727 <br/>
 					<b>Telegram</b> https://telegram.me/hcfe_bot
 				</div>	
-				<div class="col-md-5 copyright-g">
+				<div class="col-md-5 col-sm-12 copyright-g">
 					<ul class="copyright-cc">
 						<li>
 							<a href="#" class="cc-g-tw"></a>
