--- a/gektar.html
+++ b/gektar.html
@@ -283,6 +283,7 @@
 		</div>
 	</section>
 
+
 	<section id="main-g-cc" class="page-gektar">
 		<div class="container">
 			<div class="row">
@@ -291,23 +292,26 @@
 						<a href="#" class="mpsh-header">Обзор соцсетей</a>
 						<ul>
 							<li>
-								<a href="#" class="">facebook</a>
+								<a data-toggle="tab" href="#panel-fb" class="">facebook</a>
 							</li>
 							<li>
-								<a href="#" class="mpsh-all">instagram</a>
+								<a data-toggle="tab" href="#panel-ins" class="mpsh-all">instagram</a>
 							</li>
 							<li>
-								<a href="#" class="mpsh-all">twitter</a>
+								<a data-toggle="tab" href="#panel-tw" class="mpsh-all">twitter</a>
 							</li>
 							<li class="active">
-								<a href="#" class="mpsh-all">вконтакте</a>
+								<a data-toggle="tab" href="#panel-vk" class="mpsh-all">вконтакте</a>
 							</li>
 						</ul>
 					</div>
 				</div>
 			</div>
 			<div class="row">
-				<div class="autoplay-two">
+			
+			<div class="tab-content">
+
+				<div class="autoplay-two tab-pane fade in active" id="panel-fb">
 					<div>
 						<a href="#">
 							<p><img src="images/demo-img-05.jpg"></p>
@@ -357,6 +361,21 @@
 						</a>
 					</div>
 				</div>
+
+				<div class="tab-pane fade" id="panel-ins">
+					Instagram
+				</div>
+
+				<div class="tab-pane fade" id="panel-tw">
+					Twitter
+				</div>
+
+				<div class="tab-pane fade" id="panel-vk">
+					Vkontakte
+				</div>
+
+			</div>
+
 			</div>
 		</div>
 	</section>
@@ -445,7 +464,7 @@
 										</a>
 									</div>
 								</div>
-							</div
+							</div>
 						</div>
 					</div>
 
