--- a/gektar.html
+++ b/gektar.html
@@ -291,7 +291,7 @@
 					<div class="mp-cc-body">
 						<a href="#" class="mpsh-header">Обзор соцсетей</a>
 						<ul>
-							<li>
+							<li class="active">
 								<a data-toggle="tab" href="#panel-fb" class="">facebook</a>
 							</li>
 							<li>
@@ -300,7 +300,7 @@
 							<li>
 								<a data-toggle="tab" href="#panel-tw" class="mpsh-all">twitter</a>
 							</li>
-							<li class="active">
+							<li>
 								<a data-toggle="tab" href="#panel-vk" class="mpsh-all">вконтакте</a>
 							</li>
 						</ul>
@@ -308,73 +308,215 @@
 				</div>
 			</div>
 			<div class="row">
-			
-			<div class="tab-content">
 
-				<div class="autoplay-two tab-pane fade in active" id="panel-fb">
-					<div>
-						<a href="#">
-							<p><img src="images/demo-img-05.jpg"></p>
-							<div class="cc-icons-bg"><i class="ico i-ins"></i></div>
-							<a href="#" class="cc-acc">@Primamedia.ru</a>
-							<span>Почта Банк будет кредитовать получивших "дальневосточный гектар" граждан</span>
-						</a>
-					</div>
-					<div>
-						<a href="#">
-							<p><img src="images/demo-img-02.jpg"></p>
-							<div class="cc-icons-bg"><i class="ico i-tw"></i></div>
-							<a href="#" class="cc-acc">minvostokrazvitia</a>
-							<span>Александр Галушка проинспектировал ход создания ТОР</span>
-						</a>
-					</div>
-					<div>
-						<a href="#">
-							<p><img src="images/demo-img-03.jpg"></p>
-							<div class="cc-icons-bg"><i class="ico i-fb"></i></div>
-							<a href="#" class="cc-acc">@minvostokrazvitia</a>
-							<span>Почта Банк будет кредитовать получивших "дальневосточный гектар" граждан</span>
-						</a>
-					</div>
-					<div>
-						<a href="#">
-							<p><img src="images/demo-img-05.jpg"></p>
-							<div class="cc-icons-bg"><i class="ico i-vk"></i></div>
-							<a href="#" class="cc-acc">minvostokrazvitia</a>
-							<span>Почта Банк будет кредитовать получивших "дальневосточный гектар" граждан</span>
-						</a>
-					</div>
-					<div>
-						<a href="#">
-							<p><img src="images/demo-img-06.jpg"></p>
-							<div class="cc-icons-bg"><i class="ico i-fb"></i></div>
-							<a href="#" class="cc-acc">@Primamedia.ru</a>
-							<span>Юрий Трутнев: резидентами ТОР в Якутии стали 30 компаний</span>
-						</a>
-					</div>
-					<div>
-						<a href="#">
-							<p><img src="images/demo-img-03.jpg"></p>
-							<div class="cc-icons-bg"><i class="ico i-tw"></i></div>
-							<a href="#" class="cc-acc">@minvostokrazvitia</a>
-							<span>Почта Банк будет кредитовать получивших "дальневосточный гектар" граждан</span>
-						</a>
-					</div>
-				</div>
+		
+					<div class="tab-content">
 
-				<div class="tab-pane fade" id="panel-ins">
-					Instagram
-				</div>
+						<div class="autoplay-two tab-pane fade in active" id="panel-fb">
+							<div>
+								<a href="#">
+									<p><img src="images/demo-img-05.jpg"></p>
+									<div class="cc-icons-bg"><i class="ico i-ins"></i></div>
+									<a href="#" class="cc-acc">@Primamedia.ru</a>
+									<span>Почта Банк будет кредитовать получивших "дальневосточный гектар" граждан</span>
+								</a>
+							</div>
+							<div>
+								<a href="#">
+									<p><img src="images/demo-img-02.jpg"></p>
+									<div class="cc-icons-bg"><i class="ico i-tw"></i></div>
+									<a href="#" class="cc-acc">minvostokrazvitia</a>
+									<span>Александр Галушка проинспектировал ход создания ТОР</span>
+								</a>
+							</div>
+							<div>
+								<a href="#">
+									<p><img src="images/demo-img-03.jpg"></p>
+									<div class="cc-icons-bg"><i class="ico i-fb"></i></div>
+									<a href="#" class="cc-acc">@minvostokrazvitia</a>
+									<span>Почта Банк будет кредитовать получивших "дальневосточный гектар" граждан</span>
+								</a>
+							</div>
+							<div>
+								<a href="#">
+									<p><img src="images/demo-img-05.jpg"></p>
+									<div class="cc-icons-bg"><i class="ico i-vk"></i></div>
+									<a href="#" class="cc-acc">minvostokrazvitia</a>
+									<span>Почта Банк будет кредитовать получивших "дальневосточный гектар" граждан</span>
+								</a>
+							</div>
+							<div>
+								<a href="#">
+									<p><img src="images/demo-img-06.jpg"></p>
+									<div class="cc-icons-bg"><i class="ico i-fb"></i></div>
+									<a href="#" class="cc-acc">@Primamedia.ru</a>
+									<span>Юрий Трутнев: резидентами ТОР в Якутии стали 30 компаний</span>
+								</a>
+							</div>
+							<div>
+								<a href="#">
+									<p><img src="images/demo-img-03.jpg"></p>
+									<div class="cc-icons-bg"><i class="ico i-tw"></i></div>
+									<a href="#" class="cc-acc">@minvostokrazvitia</a>
+									<span>Почта Банк будет кредитовать получивших "дальневосточный гектар" граждан</span>
+								</a>
+							</div>
+						</div>
 
-				<div class="tab-pane fade" id="panel-tw">
-					Twitter
-				</div>
+						<div class="autoplay-two-02 tab-pane fade" id="panel-ins">
+							<div>
+								<a href="#">
+									<p><img src="images/demo-img-05.jpg"></p>
+									<div class="cc-icons-bg"><i class="ico i-ins"></i></div>
+									<a href="#" class="cc-acc">@Primamedia.ru</a>
+									<span>Почта Банк будет кредитовать получивших "дальневосточный гектар" граждан</span>
+								</a>
+							</div>
+							<div>
+								<a href="#">
+									<p><img src="images/demo-img-02.jpg"></p>
+									<div class="cc-icons-bg"><i class="ico i-tw"></i></div>
+									<a href="#" class="cc-acc">minvostokrazvitia</a>
+									<span>Александр Галушка проинспектировал ход создания ТОР</span>
+								</a>
+							</div>
+							<div>
+								<a href="#">
+									<p><img src="images/demo-img-03.jpg"></p>
+									<div class="cc-icons-bg"><i class="ico i-fb"></i></div>
+									<a href="#" class="cc-acc">@minvostokrazvitia</a>
+									<span>Почта Банк будет кредитовать получивших "дальневосточный гектар" граждан</span>
+								</a>
+							</div>
+							<div>
+								<a href="#">
+									<p><img src="images/demo-img-05.jpg"></p>
+									<div class="cc-icons-bg"><i class="ico i-vk"></i></div>
+									<a href="#" class="cc-acc">minvostokrazvitia</a>
+									<span>Почта Банк будет кредитовать получивших "дальневосточный гектар" граждан</span>
+								</a>
+							</div>
+							<div>
+								<a href="#">
+									<p><img src="images/demo-img-06.jpg"></p>
+									<div class="cc-icons-bg"><i class="ico i-fb"></i></div>
+									<a href="#" class="cc-acc">@Primamedia.ru</a>
+									<span>Юрий Трутнев: резидентами ТОР в Якутии стали 30 компаний</span>
+								</a>
+							</div>
+							<div>
+								<a href="#">
+									<p><img src="images/demo-img-03.jpg"></p>
+									<div class="cc-icons-bg"><i class="ico i-tw"></i></div>
+									<a href="#" class="cc-acc">@minvostokrazvitia</a>
+									<span>Почта Банк будет кредитовать получивших "дальневосточный гектар" граждан</span>
+								</a>
+							</div>
+						</div>
 
-				<div class="tab-pane fade" id="panel-vk">
-					Vkontakte
-				</div>
+						<div class="autoplay-two-03 tab-pane fade" id="panel-tw">
+							<div>
+								<a href="#">
+									<p><img src="images/demo-img-05.jpg"></p>
+									<div class="cc-icons-bg"><i class="ico i-ins"></i></div>
+									<a href="#" class="cc-acc">@Primamedia.ru</a>
+									<span>Почта Банк будет кредитовать получивших "дальневосточный гектар" граждан</span>
+								</a>
+							</div>
+							<div>
+								<a href="#">
+									<p><img src="images/demo-img-02.jpg"></p>
+									<div class="cc-icons-bg"><i class="ico i-tw"></i></div>
+									<a href="#" class="cc-acc">minvostokrazvitia</a>
+									<span>Александр Галушка проинспектировал ход создания ТОР</span>
+								</a>
+							</div>
+							<div>
+								<a href="#">
+									<p><img src="images/demo-img-03.jpg"></p>
+									<div class="cc-icons-bg"><i class="ico i-fb"></i></div>
+									<a href="#" class="cc-acc">@minvostokrazvitia</a>
+									<span>Почта Банк будет кредитовать получивших "дальневосточный гектар" граждан</span>
+								</a>
+							</div>
+							<div>
+								<a href="#">
+									<p><img src="images/demo-img-05.jpg"></p>
+									<div class="cc-icons-bg"><i class="ico i-vk"></i></div>
+									<a href="#" class="cc-acc">minvostokrazvitia</a>
+									<span>Почта Банк будет кредитовать получивших "дальневосточный гектар" граждан</span>
+								</a>
+							</div>
+							<div>
+								<a href="#">
+									<p><img src="images/demo-img-06.jpg"></p>
+									<div class="cc-icons-bg"><i class="ico i-fb"></i></div>
+									<a href="#" class="cc-acc">@Primamedia.ru</a>
+									<span>Юрий Трутнев: резидентами ТОР в Якутии стали 30 компаний</span>
+								</a>
+							</div>
+							<div>
+								<a href="#">
+									<p><img src="images/demo-img-03.jpg"></p>
+									<div class="cc-icons-bg"><i class="ico i-tw"></i></div>
+									<a href="#" class="cc-acc">@minvostokrazvitia</a>
+									<span>Почта Банк будет кредитовать получивших "дальневосточный гектар" граждан</span>
+								</a>
+							</div>
+						</div>
 
-			</div>
+						<div class="autoplay-two-04 tab-pane fade" id="panel-vk">
+							<div>
+								<a href="#">
+									<p><img src="images/demo-img-05.jpg"></p>
+									<div class="cc-icons-bg"><i class="ico i-ins"></i></div>
+									<a href="#" class="cc-acc">@Primamedia.ru</a>
+									<span>Почта Банк будет кредитовать получивших "дальневосточный гектар" граждан</span>
+								</a>
+							</div>
+							<div>
+								<a href="#">
+									<p><img src="images/demo-img-02.jpg"></p>
+									<div class="cc-icons-bg"><i class="ico i-tw"></i></div>
+									<a href="#" class="cc-acc">minvostokrazvitia</a>
+									<span>Александр Галушка проинспектировал ход создания ТОР</span>
+								</a>
+							</div>
+							<div>
+								<a href="#">
+									<p><img src="images/demo-img-03.jpg"></p>
+									<div class="cc-icons-bg"><i class="ico i-fb"></i></div>
+									<a href="#" class="cc-acc">@minvostokrazvitia</a>
+									<span>Почта Банк будет кредитовать получивших "дальневосточный гектар" граждан</span>
+								</a>
+							</div>
+							<div>
+								<a href="#">
+									<p><img src="images/demo-img-05.jpg"></p>
+									<div class="cc-icons-bg"><i class="ico i-vk"></i></div>
+									<a href="#" class="cc-acc">minvostokrazvitia</a>
+									<span>Почта Банк будет кредитовать получивших "дальневосточный гектар" граждан</span>
+								</a>
+							</div>
+							<div>
+								<a href="#">
+									<p><img src="images/demo-img-06.jpg"></p>
+									<div class="cc-icons-bg"><i class="ico i-fb"></i></div>
+									<a href="#" class="cc-acc">@Primamedia.ru</a>
+									<span>Юрий Трутнев: резидентами ТОР в Якутии стали 30 компаний</span>
+								</a>
+							</div>
+							<div>
+								<a href="#">
+									<p><img src="images/demo-img-03.jpg"></p>
+									<div class="cc-icons-bg"><i class="ico i-tw"></i></div>
+									<a href="#" class="cc-acc">@minvostokrazvitia</a>
+									<span>Почта Банк будет кредитовать получивших "дальневосточный гектар" граждан</span>
+								</a>
+							</div>
+						</div>
+
+					</div>
 
 			</div>
 		</div>
