Search + Select inline

--- a/normativ.html
+++ b/normativ.html
@@ -37,6 +37,7 @@
 			<div class="col-mn-l">
 				<a href="index.html" class="mlogo">
 					<img src="img/logo.svg">
+					<p>Единый сервисно-информационный портал о Дальнем Востоке</p>
 				</a>
 			</div>
 		</div>
@@ -60,6 +61,7 @@
 				<div class="col-md-4 h-logo">
 					<a href="index.html">
 						<img src="img/logo.svg" width="310px" heihgt="64">
+						<p>Единый сервисно-информационный портал о Дальнем Востоке</p>
 					</a>
 				</div>
 
@@ -200,6 +202,21 @@
 					<h2>НОРМАТИВНОЕ РЕГУЛИРОВАНИЕ</h2>
 						<div class="calendar">
 							<ul class="cal-ui">
+								<li class="link-region">
+									 <div class="form-group">
+										  <select class="form-control" id="sel1">
+										    <option>Российская Федерация</option>
+										    <option>Амурская область</option>
+										    <option>Еврейская автономная область</option>
+										    <option>Камчатский край</option>
+										    <option>Магаданская область</option>
+										    <option>Республика Саха (Якутия)</option>
+										    <option>Сахалинская область</option>
+										    <option>Хабаровский край</option>
+										    <option>Чукотский автономный округ</option>
+										  </select>
+									</div> 
+								</li>
 								<li class="news-search">
 									<div id="seacrh_container2">
 										<div class="input-group stylish-input-group">
@@ -240,21 +257,6 @@
 								<li>
 									<a href="#">Проекты</a>
 								</li>
-								<li class="link-region">
-								 <div class="form-group">
-									  <select class="form-control" id="sel1">
-									    <option>Российская Федерация</option>
-									    <option>Амурская область</option>
-									    <option>Еврейская автономная область</option>
-									    <option>Камчатский край</option>
-									    <option>Магаданская область</option>
-									    <option>Республика Саха (Якутия)</option>
-									    <option>Сахалинская область</option>
-									    <option>Хабаровский край</option>
-									    <option>Чукотский автономный округ</option>
-									  </select>
-								</div> 
-							</li>
 							</ul>
 							<div class="htags">
 								<h2>Тэги</h2>
