--- a/gektar.html
+++ b/gektar.html
@@ -64,7 +64,7 @@
 				}
 
 		});
-	</script>
+	</script>	
 
 </head>
 <body>
@@ -329,7 +329,7 @@
 		
 					<div class="tab-content">
 
-						<div class="autoplay-two tab-pane fade in active" id="panel-fb">
+						<div class="autoplay-two tab-pane in active" id="panel-fb">
 							<div>
 								<a href="#">
 									<p><img src="images/demo-img-05.jpg"></p>
@@ -380,7 +380,7 @@
 							</div>
 						</div>
 
-						<div class="autoplay-two-02 tab-pane fade" id="panel-ins">
+						<div class="autoplay-two-02 tab-pane" id="panel-ins">
 							<div>
 								<a href="#">
 									<p><img src="images/demo-img-05.jpg"></p>
@@ -431,7 +431,7 @@
 							</div>
 						</div>
 
-						<div class="autoplay-two-03 tab-pane fade" id="panel-tw">
+						<div class="autoplay-two-03 tab-pane" id="panel-tw">
 							<div>
 								<a href="#">
 									<p><img src="images/demo-img-05.jpg"></p>
@@ -482,7 +482,7 @@
 							</div>
 						</div>
 
-						<div class="autoplay-two-04 tab-pane fade" id="panel-vk">
+						<div class="autoplay-two-04 tab-pane" id="panel-vk">
 							<div>
 								<a href="#">
 									<p><img src="images/demo-img-05.jpg"></p>
