--- a/news.html
+++ b/news.html
@@ -203,6 +203,7 @@
 							<div class="img-mmedia-tn">
 									<img src="images/demo-img-01.jpg">
 							</div>
+							<span class="tp-img-title">Международный фестиваль обжига керамики. Фото: предоставлено пресс-службой правительства Сахалинской области</span>
 							<ul class="tp-newsinfo">
 								<li>
 									<a href="#" class="flow">Еврейская автономная область</a>
