--- a/tourism/tourism-region.html
+++ b/tourism/tourism-region.html
@@ -639,8 +639,8 @@
     });
       
       
-    (function($) {
-      $('.gid-list__item').mouseover(function(e) {
+(function($) {
+      $('.gid-list__item').click(function(e) {
 
         $('.map-pointer').each(function(e) {
           $('body').prepend('<div class="city" id="city' + e + '"></div>');
@@ -652,11 +652,6 @@
         })
       });
 
-    })(jQuery);
-    (function($) {
-      $('.gid-list__item').mouseleave(function() {
-        $('.city').remove();
-      })
     })(jQuery);
   </script>
   <!--конец макета-->
