Доделал туризм-регион

--- a/tourism/tourism-region.html
+++ b/tourism/tourism-region.html
@@ -540,20 +540,48 @@
            <div class="typeof-rest-wrapp col-md-12 col-sm-12">
            <h2 class="region-description__h2-tittle" id="attraction-rest-tittle">Вид отдыха</h2>   
             <ul class="typeof-rest-list col-md-8">
-                <li class="typeof-rest-item" id="rest-item-0"></li>
-                <li class="typeof-rest-item" id="rest-item-1"></li>
-                <li class="typeof-rest-item" id="rest-item-2"></li>
-                <li class="typeof-rest-item" id="rest-item-3"></li>
-                <li class="typeof-rest-item" id="rest-item-4"></li>
-                <li class="typeof-rest-item" id="rest-item-5"></li>
-                <li class="typeof-rest-item" id="rest-item-6"></li>
-                <li class="typeof-rest-item" id="rest-item-7"></li>
-                <li class="typeof-rest-item" id="rest-item-8"></li>
-                <li class="typeof-rest-item" id="rest-item-9"></li>
-                <li class="typeof-rest-item" id="rest-item-10"></li>
-                <li class="typeof-rest-item" id="rest-item-11"></li>
-                <li class="typeof-rest-item" id="rest-item-12"></li>
-                <li class="typeof-rest-item" id="rest-item-13"></li>
+                <li class="typeof-rest-item" id="rest-item-0">
+                    <p class="rest-item-p">Пляжный отдых</p>
+                </li>
+                <li class="typeof-rest-item" id="rest-item-1"> 
+                <p class="rest-item-p">Зимний спорт</p>
+                </li>
+                <li class="typeof-rest-item" id="rest-item-2"> 
+                <p class="rest-item-p">Културно-познавательный отдых</p>
+                </li>
+                <li class="typeof-rest-item" id="rest-item-3"> 
+                <p class="rest-item-p">Семейный отдых</p>
+                </li>
+                <li class="typeof-rest-item" id="rest-item-4"> 
+                <p class="rest-item-p">Круизный спорт</p>
+                </li>
+                <li class="typeof-rest-item" id="rest-item-5"> 
+                <p class="rest-item-p">Рафтинг</p>
+                </li>
+                <li class="typeof-rest-item" id="rest-item-6"> 
+                <p class="rest-item-p">Дайвинг</p>
+                </li>
+                <li class="typeof-rest-item" id="rest-item-7"> 
+                <p class="rest-item-p">Экотуризм</p>
+                </li>
+                <li class="typeof-rest-item" id="rest-item-8"> 
+                <p class="rest-item-p">Лечебно-оздоровительный отдых</p>
+                </li>
+                <li class="typeof-rest-item" id="rest-item-9"> 
+                <p class="rest-item-p">Скалолазание/спелео</p>
+                </li>
+                <li class="typeof-rest-item" id="rest-item-10"> 
+                <p class="rest-item-p">Охота</p>
+                </li>
+                <li class="typeof-rest-item" id="rest-item-11"> 
+                <p class="rest-item-p">Рыбалка</p>
+                </li>
+                <li class="typeof-rest-item" id="rest-item-12"> 
+                <p class="rest-item-p">Этнотуризм</p>
+                </li>
+                <li class="typeof-rest-item" id="rest-item-13"> 
+                <p class="rest-item-p">Гастротуризм</p>
+                </li>
             </ul>   
            </div>
            </div>
