Создал базовую разметку чтобы продолжить дальше

--- a/tourism/tourism-showplace.html
+++ b/tourism/tourism-showplace.html
@@ -428,69 +428,9 @@
     </div>
   </div>
   <!--начало макета-->
-  <section class="tourism-section">
-
-    <div class="container cards-layout-wrapp">
-    <div class="col-md-12 col-sm-12 region-type-wrapp">
-     <h2 class="region-caption" id="tourism-type">Гид</h2>
-     <div class="col-md-4 col-sm-5 tourism-form-wrapp relative">
-     <form action="" method="post" class="tourism-type-form" id="tourism-form">
-        <select name="select2" class="gid-select">
-          <option id="gid-region-default" selected="selected">Дальний восток</option>
-          <option id="gid-region1" class="gid-option">Амурская область</option>
-          <option id="gid-region2" class="gid-option">Еврейская автономная область</option>
-          <option id="gid-region3" class="gid-option">Камчатский край</option>
-          <option id="gid-region4" class="gid-option">Магаданская область</option>
-          <option id="gid-region5" class="gid-option">Приморский край</option>
-          <option id="gid-region6" class="gid-option">Республика Саха (Якутия)</option>
-          <option id="gid-region7" class="gid-option">Сахалинская область</option>
-          <option id="gid-region8" class="gid-option">Хабаровский край</option>
-          <option id="gid-region9" class="gid-option">Чукотский автономный округ</option>
-      </select> 
-     </form>
-     </div>
-    </div>
-     
-      </div>
-    </section>
-        <div class="relative">
-      <a class="left slider-control region-slider-control left-scroll" id="right-scroller">
-                    <img src="https://nadv.ru/_v2/images/left-arrow.png" class="carousel-arrow" alt="Left arrow">
-
-                </a>
-      <a class="right slider-control region-slider-control right-scroll" id="left-scroller">
-       <img src="https://nadv.ru/_v2/images/right-arrow.png" class="carousel-arrow" alt="Left arrow">
-
-    </a>
-
-      <div class="scroll-container horiz-scroll" id="scroll-feature">
-        <ul class="list-container region-list-container scroll-images">
-          <li>
-          </li>
-          <li>
-          </li>
-          <li>
-          </li>
-          <li>
-          </li>
-          <li>
-          </li>
-          <li>
-          </li>
-          <li>
-          </li>
-          <li>
-          </li>
-          <li>
-          </li>
-          <li>
-          </li>
-          <li>
-          </li>
-          <li>
-          </li>
-        </ul>
-      </div>
+        <div class="container showplace-comeback"><a href="#">вернуться назад</a></div> 
+        <div class="relative row showplace-header-row">
+        <div class="showplace-img"></div>
     </div>  
       <section class="region-description" id="region-description-5">
           <div class="container region-description-wraap">
