Добавил окошко наверху блока
и стили для него

--- a/tourism/tourism-showplace.html
+++ b/tourism/tourism-showplace.html
@@ -428,9 +428,14 @@
     </div>
   </div>
   <!--начало макета-->
-        <div class="container showplace-comeback"><a href="#">вернуться назад</a></div> 
+        <div class="container showplace-comeback"><a href="#">← вернуться назад</a></div> 
         <div class="relative row showplace-header-row">
-        <div class="showplace-img"></div>
+        <div class="showplace-img" id="showplace-img">
+            <div class="showplace-region">
+            <p>Приморский край</p>
+            </div>
+        </div>
+        
     </div>  
       <section class="region-description" id="region-description-5">
           <div class="container region-description-wraap">
