Добавил иконки виджетов погоды и времени
И стили к ним

--- a/tourism/tourism-region.html
+++ b/tourism/tourism-region.html
@@ -497,6 +497,10 @@
               <div class="col-md-12 col-sm-12  region-grid">
                       <div class="col-md-5 col-sm-5 region-map relative">
                       <div class="region-map-img" region-map-5></div>
+                      <div class="region-widgets">
+                          <div class="region-widget region-weather-widget" id="region-weather-widget"><p class="region-weather-celc" id="region-weather-celc">-1...1</p>°С, <p class="region-weather" id="region-weather">&nbsp; небольшой снег</p></div>
+                          <div class="region-widget region-time-widget" id="region-time-widget"><p class="region-time" id="region-time">10:00</p><p class="region-time-difference">&nbsp;(+7 МСК)</p></div>
+                      </div>
                       </div>
                       <div class="col-md-7 col-sm-7 region-description-layout" id="region-layout-5">
                           <h1 class="region-description__h1-tittle">О регионе</h1>
