почти закончил работу над календарем

--- a/tourism/tourism-calendar.html
+++ b/tourism/tourism-calendar.html
@@ -445,30 +445,94 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   
   <section class="tourism-section">
-    <div class="container">
+   
+<div class="container">
       <h2 class="region-caption">Календарь событий</h2>
-      <div class="col-md-12 tour-calendar-wrapp cal-wrapp">
+      <div class="col-md-12 col-sm-12 tour-calendar-wrapp cal-wrapp">
         <div class="col-md-9 col-sm-9 relative tour-calendar-image ivent-image">
           <div class="tour-calendar-caption cal-caption">
             <p id="cal-num">25</p>
             <p id="cal-month">ноябрь</p>
             <p id="cal-year">2017</p>
           </div>
+        <div class="tour-calendar-ivent-type">Туризм</div>
         </div>
 
-        <div class="col-md-9 col-sm-9 ivent-wrapp">
-          <div class="ivent-text-wrapp">
-            <h2 class="left" id="ivent-capt">
+        <div class="col-md-9 col-sm-9 tour-calendar-ivent-wrapp ivent-wrapp">
+          <div class="col-md-12 col-sm-12 tour-calendar-text-wrapp ivent-text-wrapp">
+            <h2 class="tour-calendar-ivent-capt left" id="ivent-capt">
                             Джип-тур на Пидан группой не более 10 человек
                         </h2>
-            <p id="ivent-place">Приморский край, гора Пидан</p>
+            <p id="ivent-place" class="col-md-9 col-sm-9 tour-calendar-ivent-place">Приморский край, гора Пидан</p>
             <br>
-            <p id="ivent-about">Каждые выходные вы можете окунуться в удивительный мир дальневосточной тайги, пройти и подняться на полной мистических легенд - гору Пидан (1333 м.).
+            <p id="ivent-about" class="col-md-12 col-sm-12 tour-calendar-ivent-about">Каждые выходные вы можете окунуться в удивительный мир дальневосточной тайги, пройти и подняться на полной мистических легенд - гору Пидан (1333 м.).
               <br> Послушать из уст экскурсовода загадочные и удивительные истории этих мест. Поездки как и большой группой так и комфортные поездки на внедорожнике.</p>
           </div>
         </div>
       </div>
-    </div>
+<!--      карточки-->
+      <div class="col-md-10 col-sm-12 attraction-attractions">
+      <div class="region-cards-container">
+       
+        <ul class="tour-calendar-container gid-list-container col-md-12">
+            <li class="col-md-6 col-sm-5"><a href=""><img src="https://nadv.ru/_v2/images/defaultimg.png" alt="">
+            <h3 class="tour-calendar-scroll-header scroll-header" place-name="place-name-1">Подготовка к масштабному мюзиклу "Танцуют все" продолжается во Владивостоке 
+            </h3>
+            <p class="list-container_item" place-adress="place-adrees-1">Приморский край, г.Дальнегорск, длинное название места</p>
+            </a>
+          </li>
+            <li class="col-md-6 col-sm-5"><a href=""><img src="https://nadv.ru/_v2/images/defaultimg.png" alt=""></a>
+            <h3 class="tour-calendar-scroll-header scroll-header" place-name="place-name-1"><a href=""> Название места для посещения</a>
+            </h3>
+            <p class="list-container_item" place-adress="place-adrees-1">Приморский край, г.Дальнегорск, длинное название места</p>
+          </li>
+            <li class="col-md-6 col-sm-5"><a href=""> <img src="https://nadv.ru/_v2/images/defaultimg.png" alt=""></a>
+            <h3 class="tour-calendar-scroll-header scroll-header" place-name="place-name-1"><a href=""> Название места для посещения</a>
+            </h3>
+            <p class="list-container_item" place-adress="place-adrees-1">Приморский край, г.Дальнегорск, длинное название места</p>
+          </li>
+            <li class="col-md-6 col-sm-5"><a href=""> <img src="https://nadv.ru/_v2/images/defaultimg.png" alt=""></a>
+            <h3 class="tour-calendar-scroll-header scroll-header" place-name="place-name-1"><a href=""> Название места для посещения</a>
+            </h3>
+            <p class="list-container_item" place-adress="place-adrees-1">Приморский край, г.Дальнегорск, длинное название места</p>
+          </li>
+            <li class="col-md-6 col-sm-5"><a href=""> <img src="https://nadv.ru/_v2/images/defaultimg.png" alt=""></a>
+            <h3 class="tour-calendar-scroll-header scroll-header" place-name="place-name-1"><a href=""> Название места для посещения</a>
+            </h3>
+            <p class="list-container_item" place-adress="place-adrees-1">Приморский край, г.Дальнегорск, длинное название места</p>
+          </li>
+            <li class="col-md-6 col-sm-5"><a href=""> <img src="https://nadv.ru/_v2/images/defaultimg.png" alt=""></a>
+            <h3 class="tour-calendar-scroll-header scroll-header" place-name="place-name-1"><a href=""> Название места для посещения</a>
+            </h3>
+            <p class="list-container_item" place-adress="place-adrees-1">Приморский край, г.Дальнегорск, длинное название места</p>
+          </li>
+            <li class="col-md-6 col-sm-5"><a href=""> <img src="https://nadv.ru/_v2/images/defaultimg.png" alt=""></a>
+            <h3 class="tour-calendar-scroll-header scroll-header" place-name="place-name-1"><a href=""> Название места для посещения</a>
+            </h3>
+            <p class="list-container_item" place-adress="place-adrees-1">Приморский край, г.Дальнегорск, длинное название места</p>
+          </li>
+            <li class="col-md-6 col-sm-5"><a href=""> <img src="https://nadv.ru/_v2/images/defaultimg.png" alt=""></a>
+            <h3 class="tour-calendar-scroll-header scroll-header" place-name="place-name-1"><a href=""> Название места для посещения</a>
+            </h3>
+            <p class="list-container_item" place-adress="place-adrees-1">Приморский край, г.Дальнегорск, длинное название места</p>
+          </li>
+            <li class="col-md-6 col-sm-5"><a href=""> <img src="https://nadv.ru/_v2/images/defaultimg.png" alt=""></a>
+            <h3 class="tour-calendar-scroll-header scroll-header" place-name="place-name-1"><a href=""> Название места для посещения</a>
+            </h3>
+            <p class="list-container_item" place-adress="place-adrees-1">Приморский край, г.Дальнегорск, длинное название места</p>
+          </li>
+            <li class="col-md-6 col-sm-5"><a href=""> <img src="https://nadv.ru/_v2/images/defaultimg.png" alt=""></a>
+            <h3 class="tour-calendar-scroll-header scroll-header" place-name="place-name-1"><a href=""> Название места для посещения</a>
+            </h3>
+            <p class="list-container_item" place-adress="place-adrees-1">Приморский край, г.Дальнегорск, длинное название места</p>
+          </li>
+        </ul>
+     
+    </div>   
+
+           </div>
+    </div>   
+   
   </section>
 
   
